--- a/docker_env/application/source/caroussel/css/style.css
+++ b/docker_env/application/source/caroussel/css/style.css
@@ -400,7 +400,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 	  transform:translate(-50%,-50%)
   }
   
-  
+  .carousel-item:hover , .carousel-item active:hover{
+	transform : scale(1.1);
+}
 
 
 
@@ -437,6 +439,5 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 }
 
 .
-   
-}
+
 	
