--- a/docker_env/application/source/style.css
+++ b/docker_env/application/source/style.css
@@ -93,10 +93,12 @@ a {
    
 }
 #containerSignin{
-  border-radius: 15px;
+  border-radius: 10px;
   padding: 15px;
   margin-top: 100px;
   margin-bottom: 200px;
+  background-color: rgba(6, 43, 43, 0.507);
+  
 }
  
 .cardbody {
